--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         "fideloper/proxy": "^4.0",
         "google/apiclient": "^2.0",
         "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.3",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "1.0.*"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
